parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory
Rule 2     main_block -> MAIN set_global_scope body
Rule 3     set_global_scope -> <empty>
Rule 4     create_dir -> <empty>
Rule 5     fill_dir -> <empty>
Rule 6     clean_memory -> <empty>
Rule 7     var_or_not -> vars
Rule 8     var_or_not -> empty
Rule 9     vars -> VAR dec_var
Rule 10    dec_var -> list_id COLON type SEMI dec_var_opt
Rule 11    dec_var_opt -> dec_var
Rule 12    dec_var_opt -> empty
Rule 13    list_id -> ID capture_id list_id_opt
Rule 14    capture_id -> <empty>
Rule 15    list_id_opt -> COMMA list_id
Rule 16    list_id_opt -> empty
Rule 17    type -> INT capture_type
Rule 18    type -> FLOAT capture_type
Rule 19    capture_type -> <empty>
Rule 20    funcs -> void_or_type ID create_func LPAREN ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI
Rule 21    end_func -> <empty>
Rule 22    create_func -> <empty>
Rule 23    void_or_type -> VOID func_type
Rule 24    void_or_type -> type
Rule 25    func_type -> <empty>
Rule 26    funcs_or_not -> funcs funcs_or_not
Rule 27    funcs_or_not -> empty
Rule 28    ids -> ID capture_id COLON type capture_type ids_loop
Rule 29    ids -> empty
Rule 30    ids_loop -> COMMA ids
Rule 31    ids_loop -> empty
Rule 32    vars_or_not -> vars
Rule 33    vars_or_not -> empty
Rule 34    body -> LBRACE statement_loop RBRACE
Rule 35    statement_loop -> statement statement_loop
Rule 36    statement_loop -> empty
Rule 37    statement -> assign
Rule 38    statement -> condition
Rule 39    statement -> cycle
Rule 40    statement -> llamada COMMA
Rule 41    statement -> print
Rule 42    statement -> LBRACKET statement_loop RBRACKET
Rule 43    assign -> ID ASSIGN expresion SEMI
Rule 44    expresion -> exp relations_or_not
Rule 45    relations_or_not -> GT capture_relation exp check_relation
Rule 46    relations_or_not -> LT capture_relation exp check_relation
Rule 47    relations_or_not -> NEQ capture_relation exp check_relation
Rule 48    relations_or_not -> EQ capture_relation exp check_relation
Rule 49    relations_or_not -> empty
Rule 50    capture_relation -> <empty>
Rule 51    check_relation -> <empty>
Rule 52    exp -> term check_plus_minus more_terms
Rule 53    check_plus_minus -> <empty>
Rule 54    more_terms -> PLUS capture_Oper exp
Rule 55    more_terms -> MINUS capture_Oper exp
Rule 56    more_terms -> empty
Rule 57    capture_Oper -> <empty>
Rule 58    term -> factor check_mult_div more_factors
Rule 59    check_mult_div -> <empty>
Rule 60    more_factors -> TIMES capture_Oper term
Rule 61    more_factors -> DIVIDE capture_Oper term
Rule 62    more_factors -> empty
Rule 63    factor_type -> LPAREN begin_paren expresion RPAREN end_paren
Rule 64    factor_type -> PLUS id_or_cte
Rule 65    factor_type -> MINUS id_or_cte
Rule 66    factor_type -> id_or_cte
Rule 67    factor_type -> llamada
Rule 68    begin_paren -> <empty>
Rule 69    end_paren -> <empty>
Rule 70    factor -> factor_type
Rule 71    id_or_cte -> ID capture_id_oper
Rule 72    id_or_cte -> cte
Rule 73    capture_id_oper -> <empty>
Rule 74    llamada -> ID LPAREN expresion_or_not RPAREN
Rule 75    expresion_or_not -> expresion expresion_loop
Rule 76    expresion_or_not -> empty
Rule 77    expresion_loop -> COMMA expresion expresion_loop
Rule 78    expresion_loop -> empty
Rule 79    cte -> CTE_INT capture_cte_int
Rule 80    cte -> CTE_FLOAT capture_cte_float
Rule 81    capture_cte_int -> <empty>
Rule 82    capture_cte_float -> <empty>
Rule 83    condition -> IF LPAREN expresion RPAREN body else_or_not SEMI
Rule 84    else_or_not -> ELSE body
Rule 85    else_or_not -> empty
Rule 86    cycle -> WHILE LPAREN expresion RPAREN DO body SEMI
Rule 87    print -> PRINT LPAREN expresion_or_string RPAREN SEMI
Rule 88    expresion_or_string -> expresion print_expr list_objs
Rule 89    expresion_or_string -> CTE_STRING print_str list_objs
Rule 90    print_expr -> <empty>
Rule 91    print_str -> <empty>
Rule 92    list_objs -> COMMA expresion_or_string
Rule 93    list_objs -> empty
Rule 94    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 43
COLON                : 10 28
COMMA                : 15 30 40 77 92
CTE_FLOAT            : 80
CTE_INT              : 79
CTE_STRING           : 89
DIVIDE               : 61
DO                   : 86
ELSE                 : 84
END                  : 1
EQ                   : 48
FLOAT                : 18
GT                   : 45
ID                   : 1 13 20 28 43 71 74
IF                   : 83
INT                  : 17
LBRACE               : 20 34
LBRACKET             : 42
LPAREN               : 20 63 74 83 86 87
LT                   : 46
MAIN                 : 2
MINUS                : 55 65
NEQ                  : 47
PLUS                 : 54 64
PRINT                : 87
PROGRAM              : 1
RBRACE               : 20 34
RBRACKET             : 42
RPAREN               : 20 63 74 83 86 87
SEMI                 : 1 10 20 43 83 86 87
TIMES                : 60
VAR                  : 9
VOID                 : 23
WHILE                : 86
error                : 

Nonterminals, with rules where they appear

assign               : 37
begin_paren          : 63
body                 : 2 20 83 84 86
capture_Oper         : 54 55 60 61
capture_cte_float    : 80
capture_cte_int      : 79
capture_id           : 13 28
capture_id_oper      : 71
capture_relation     : 45 46 47 48
capture_type         : 17 18 28
check_mult_div       : 58
check_plus_minus     : 52
check_relation       : 45 46 47 48
clean_memory         : 1
condition            : 38
create_dir           : 1
create_func          : 20
cte                  : 72
cycle                : 39
dec_var              : 9 11
dec_var_opt          : 10
else_or_not          : 83
empty                : 8 12 16 27 29 31 33 36 49 56 62 76 78 85 93
end_func             : 20
end_paren            : 63
exp                  : 44 45 46 47 48 54 55
expresion            : 43 63 75 77 83 86 88
expresion_loop       : 75 77
expresion_or_not     : 74
expresion_or_string  : 87 92
factor               : 58
factor_type          : 70
fill_dir             : 1
func_type            : 23
funcs                : 26
funcs_or_not         : 1 26
id_or_cte            : 64 65 66
ids                  : 20 30
ids_loop             : 28
list_id              : 10 15
list_id_opt          : 13
list_objs            : 88 89
llamada              : 40 67
main_block           : 1
more_factors         : 58
more_terms           : 52
print                : 41
print_expr           : 88
print_str            : 89
programa             : 0
relations_or_not     : 44
set_global_scope     : 2
statement            : 35
statement_loop       : 34 35 42
term                 : 52 60 61
type                 : 10 24 28
var_or_not           : 1
vars                 : 7 32
vars_or_not          : 20
void_or_type         : 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory
    (4) create_dir -> .

    ID              reduce using rule 4 (create_dir -> .)

    create_dir                     shift and go to state 3

state 3

    (1) programa -> PROGRAM create_dir . ID fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory

    ID              shift and go to state 4


state 4

    (1) programa -> PROGRAM create_dir ID . fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory
    (5) fill_dir -> .

    SEMI            reduce using rule 5 (fill_dir -> .)

    fill_dir                       shift and go to state 5

state 5

    (1) programa -> PROGRAM create_dir ID fill_dir . SEMI var_or_not funcs_or_not main_block END clean_memory

    SEMI            shift and go to state 6


state 6

    (1) programa -> PROGRAM create_dir ID fill_dir SEMI . var_or_not funcs_or_not main_block END clean_memory
    (7) var_or_not -> . vars
    (8) var_or_not -> . empty
    (9) vars -> . VAR dec_var
    (94) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 94 (empty -> .)
    INT             reduce using rule 94 (empty -> .)
    FLOAT           reduce using rule 94 (empty -> .)
    MAIN            reduce using rule 94 (empty -> .)

    var_or_not                     shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 9

state 7

    (1) programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not . funcs_or_not main_block END clean_memory
    (26) funcs_or_not -> . funcs funcs_or_not
    (27) funcs_or_not -> . empty
    (20) funcs -> . void_or_type ID create_func LPAREN ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI
    (94) empty -> .
    (23) void_or_type -> . VOID func_type
    (24) void_or_type -> . type
    (17) type -> . INT capture_type
    (18) type -> . FLOAT capture_type

    MAIN            reduce using rule 94 (empty -> .)
    VOID            shift and go to state 15
    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    funcs_or_not                   shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13
    void_or_type                   shift and go to state 14
    type                           shift and go to state 16

state 8

    (7) var_or_not -> vars .

    VOID            reduce using rule 7 (var_or_not -> vars .)
    INT             reduce using rule 7 (var_or_not -> vars .)
    FLOAT           reduce using rule 7 (var_or_not -> vars .)
    MAIN            reduce using rule 7 (var_or_not -> vars .)


state 9

    (8) var_or_not -> empty .

    VOID            reduce using rule 8 (var_or_not -> empty .)
    INT             reduce using rule 8 (var_or_not -> empty .)
    FLOAT           reduce using rule 8 (var_or_not -> empty .)
    MAIN            reduce using rule 8 (var_or_not -> empty .)


state 10

    (9) vars -> VAR . dec_var
    (10) dec_var -> . list_id COLON type SEMI dec_var_opt
    (13) list_id -> . ID capture_id list_id_opt

    ID              shift and go to state 21

    dec_var                        shift and go to state 19
    list_id                        shift and go to state 20

state 11

    (1) programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not . main_block END clean_memory
    (2) main_block -> . MAIN set_global_scope body

    MAIN            shift and go to state 23

    main_block                     shift and go to state 22

state 12

    (26) funcs_or_not -> funcs . funcs_or_not
    (26) funcs_or_not -> . funcs funcs_or_not
    (27) funcs_or_not -> . empty
    (20) funcs -> . void_or_type ID create_func LPAREN ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI
    (94) empty -> .
    (23) void_or_type -> . VOID func_type
    (24) void_or_type -> . type
    (17) type -> . INT capture_type
    (18) type -> . FLOAT capture_type

    MAIN            reduce using rule 94 (empty -> .)
    VOID            shift and go to state 15
    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    funcs                          shift and go to state 12
    funcs_or_not                   shift and go to state 24
    empty                          shift and go to state 13
    void_or_type                   shift and go to state 14
    type                           shift and go to state 16

state 13

    (27) funcs_or_not -> empty .

    MAIN            reduce using rule 27 (funcs_or_not -> empty .)


state 14

    (20) funcs -> void_or_type . ID create_func LPAREN ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI

    ID              shift and go to state 25


state 15

    (23) void_or_type -> VOID . func_type
    (25) func_type -> .

    ID              reduce using rule 25 (func_type -> .)

    func_type                      shift and go to state 26

state 16

    (24) void_or_type -> type .

    ID              reduce using rule 24 (void_or_type -> type .)


state 17

    (17) type -> INT . capture_type
    (19) capture_type -> .

    ID              reduce using rule 19 (capture_type -> .)
    SEMI            reduce using rule 19 (capture_type -> .)
    COMMA           reduce using rule 19 (capture_type -> .)
    RPAREN          reduce using rule 19 (capture_type -> .)

    capture_type                   shift and go to state 27

state 18

    (18) type -> FLOAT . capture_type
    (19) capture_type -> .

    ID              reduce using rule 19 (capture_type -> .)
    SEMI            reduce using rule 19 (capture_type -> .)
    COMMA           reduce using rule 19 (capture_type -> .)
    RPAREN          reduce using rule 19 (capture_type -> .)

    capture_type                   shift and go to state 28

state 19

    (9) vars -> VAR dec_var .

    VOID            reduce using rule 9 (vars -> VAR dec_var .)
    INT             reduce using rule 9 (vars -> VAR dec_var .)
    FLOAT           reduce using rule 9 (vars -> VAR dec_var .)
    MAIN            reduce using rule 9 (vars -> VAR dec_var .)
    LBRACE          reduce using rule 9 (vars -> VAR dec_var .)


state 20

    (10) dec_var -> list_id . COLON type SEMI dec_var_opt

    COLON           shift and go to state 29


state 21

    (13) list_id -> ID . capture_id list_id_opt
    (14) capture_id -> .

    COMMA           reduce using rule 14 (capture_id -> .)
    COLON           reduce using rule 14 (capture_id -> .)

    capture_id                     shift and go to state 30

state 22

    (1) programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block . END clean_memory

    END             shift and go to state 31


state 23

    (2) main_block -> MAIN . set_global_scope body
    (3) set_global_scope -> .

    LBRACE          reduce using rule 3 (set_global_scope -> .)

    set_global_scope               shift and go to state 32

state 24

    (26) funcs_or_not -> funcs funcs_or_not .

    MAIN            reduce using rule 26 (funcs_or_not -> funcs funcs_or_not .)


state 25

    (20) funcs -> void_or_type ID . create_func LPAREN ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI
    (22) create_func -> .

    LPAREN          reduce using rule 22 (create_func -> .)

    create_func                    shift and go to state 33

state 26

    (23) void_or_type -> VOID func_type .

    ID              reduce using rule 23 (void_or_type -> VOID func_type .)


state 27

    (17) type -> INT capture_type .

    ID              reduce using rule 17 (type -> INT capture_type .)
    SEMI            reduce using rule 17 (type -> INT capture_type .)
    COMMA           reduce using rule 17 (type -> INT capture_type .)
    RPAREN          reduce using rule 17 (type -> INT capture_type .)


state 28

    (18) type -> FLOAT capture_type .

    ID              reduce using rule 18 (type -> FLOAT capture_type .)
    SEMI            reduce using rule 18 (type -> FLOAT capture_type .)
    COMMA           reduce using rule 18 (type -> FLOAT capture_type .)
    RPAREN          reduce using rule 18 (type -> FLOAT capture_type .)


state 29

    (10) dec_var -> list_id COLON . type SEMI dec_var_opt
    (17) type -> . INT capture_type
    (18) type -> . FLOAT capture_type

    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    type                           shift and go to state 34

state 30

    (13) list_id -> ID capture_id . list_id_opt
    (15) list_id_opt -> . COMMA list_id
    (16) list_id_opt -> . empty
    (94) empty -> .

    COMMA           shift and go to state 36
    COLON           reduce using rule 94 (empty -> .)

    list_id_opt                    shift and go to state 35
    empty                          shift and go to state 37

state 31

    (1) programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block END . clean_memory
    (6) clean_memory -> .

    $end            reduce using rule 6 (clean_memory -> .)

    clean_memory                   shift and go to state 38

state 32

    (2) main_block -> MAIN set_global_scope . body
    (34) body -> . LBRACE statement_loop RBRACE

    LBRACE          shift and go to state 40

    body                           shift and go to state 39

state 33

    (20) funcs -> void_or_type ID create_func . LPAREN ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI

    LPAREN          shift and go to state 41


state 34

    (10) dec_var -> list_id COLON type . SEMI dec_var_opt

    SEMI            shift and go to state 42


state 35

    (13) list_id -> ID capture_id list_id_opt .

    COLON           reduce using rule 13 (list_id -> ID capture_id list_id_opt .)


state 36

    (15) list_id_opt -> COMMA . list_id
    (13) list_id -> . ID capture_id list_id_opt

    ID              shift and go to state 21

    list_id                        shift and go to state 43

state 37

    (16) list_id_opt -> empty .

    COLON           reduce using rule 16 (list_id_opt -> empty .)


state 38

    (1) programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory .

    $end            reduce using rule 1 (programa -> PROGRAM create_dir ID fill_dir SEMI var_or_not funcs_or_not main_block END clean_memory .)


state 39

    (2) main_block -> MAIN set_global_scope body .

    END             reduce using rule 2 (main_block -> MAIN set_global_scope body .)


state 40

    (34) body -> LBRACE . statement_loop RBRACE
    (35) statement_loop -> . statement statement_loop
    (36) statement_loop -> . empty
    (37) statement -> . assign
    (38) statement -> . condition
    (39) statement -> . cycle
    (40) statement -> . llamada COMMA
    (41) statement -> . print
    (42) statement -> . LBRACKET statement_loop RBRACKET
    (94) empty -> .
    (43) assign -> . ID ASSIGN expresion SEMI
    (83) condition -> . IF LPAREN expresion RPAREN body else_or_not SEMI
    (86) cycle -> . WHILE LPAREN expresion RPAREN DO body SEMI
    (74) llamada -> . ID LPAREN expresion_or_not RPAREN
    (87) print -> . PRINT LPAREN expresion_or_string RPAREN SEMI

    LBRACKET        shift and go to state 52
    RBRACE          reduce using rule 94 (empty -> .)
    ID              shift and go to state 53
    IF              shift and go to state 54
    WHILE           shift and go to state 55
    PRINT           shift and go to state 56

    statement_loop                 shift and go to state 44
    statement                      shift and go to state 45
    empty                          shift and go to state 46
    assign                         shift and go to state 47
    condition                      shift and go to state 48
    cycle                          shift and go to state 49
    llamada                        shift and go to state 50
    print                          shift and go to state 51

state 41

    (20) funcs -> void_or_type ID create_func LPAREN . ids RPAREN LBRACE vars_or_not body RBRACE end_func SEMI
    (28) ids -> . ID capture_id COLON type capture_type ids_loop
    (29) ids -> . empty
    (94) empty -> .

    ID              shift and go to state 57
    RPAREN          reduce using rule 94 (empty -> .)

    ids                            shift and go to state 58
    empty                          shift and go to state 59

state 42

    (10) dec_var -> list_id COLON type SEMI . dec_var_opt
    (11) dec_var_opt -> . dec_var
    (12) dec_var_opt -> . empty
    (10) dec_var -> . list_id COLON type SEMI dec_var_opt
    (94) empty -> .
    (13) list_id -> . ID capture_id list_id_opt

    VOID            reduce using rule 94 (empty -> .)
    INT             reduce using rule 94 (empty -> .)
    FLOAT           reduce using rule 94 (empty -> .)
    MAIN            reduce using rule 94 (empty -> .)
    LBRACE          reduce using rule 94 (empty -> .)
    ID              shift and go to state 21

    list_id                        shift and go to state 20
    dec_var_opt                    shift and go to state 60
    dec_var                        shift and go to state 61
    empty                          shift and go to state 62

state 43

    (15) list_id_opt -> COMMA list_id .

    COLON           reduce using rule 15 (list_id_opt -> COMMA list_id .)


state 44

    (34) body -> LBRACE statement_loop . RBRACE

    RBRACE          shift and go to state 63


state 45

    (35) statement_loop -> statement . statement_loop
    (35) statement_loop -> . statement statement_loop
    (36) statement_loop -> . empty
    (37) statement -> . assign
    (38) statement -> . condition
    (39) statement -> . cycle
    (40) statement -> . llamada COMMA
    (41) statement -> . print
    (42) statement -> . LBRACKET statement_loop RBRACKET
    (94) empty -> .
    (43) assign -> . ID ASSIGN expresion SEMI
    (83) condition -> . IF LPAREN expresion RPAREN body else_or_not SEMI
    (86) cycle -> . WHILE LPAREN expresion RPAREN DO body SEMI
    (74) llamada -> . ID LPAREN expresion_or_not RPAREN
    (87) print -> . PRINT LPAREN expresion_or_string RPAREN SEMI

    LBRACKET        shift and go to state 52
    RBRACE          reduce using rule 94 (empty -> .)
    RBRACKET        reduce using rule 94 (empty -> .)
    ID              shift and go to state 53
    IF              shift and go to state 54
    WHILE           shift and go to state 55
    PRINT           shift and go to state 56

    statement                      shift and go to state 45
    statement_loop                 shift and go to state 64
    empty                          shift and go to state 46
    assign                         shift and go to state 47
    condition                      shift and go to state 48
    cycle                          shift and go to state 49
    llamada                        shift and go to state 50
    print                          shift and go to state 51

state 46

    (36) statement_loop -> empty .

    RBRACE          reduce using rule 36 (statement_loop -> empty .)
    RBRACKET        reduce using rule 36 (statement_loop -> empty .)


state 47

    (37) statement -> assign .

    LBRACKET        reduce using rule 37 (statement -> assign .)
    ID              reduce using rule 37 (statement -> assign .)
    IF              reduce using rule 37 (statement -> assign .)
    WHILE           reduce using rule 37 (statement -> assign .)
    PRINT           reduce using rule 37 (statement -> assign .)
    RBRACE          reduce using rule 37 (statement -> assign .)
    RBRACKET        reduce using rule 37 (statement -> assign .)


state 48

    (38) statement -> condition .

    LBRACKET        reduce using rule 38 (statement -> condition .)
    ID              reduce using rule 38 (statement -> condition .)
    IF              reduce using rule 38 (statement -> condition .)
    WHILE           reduce using rule 38 (statement -> condition .)
    PRINT           reduce using rule 38 (statement -> condition .)
    RBRACE          reduce using rule 38 (statement -> condition .)
    RBRACKET        reduce using rule 38 (statement -> condition .)


state 49

    (39) statement -> cycle .

    LBRACKET        reduce using rule 39 (statement -> cycle .)
    ID              reduce using rule 39 (statement -> cycle .)
    IF              reduce using rule 39 (statement -> cycle .)
    WHILE           reduce using rule 39 (statement -> cycle .)
    PRINT           reduce using rule 39 (statement -> cycle .)
    RBRACE          reduce using rule 39 (statement -> cycle .)
    RBRACKET        reduce using rule 39 (statement -> cycle .)


state 50
